tests/reference/asr-rewind_invalid_kwarg1-54e2b4f.stderr
semantic error: Invalid argument `end` supplied
 --> tests/errors/rewind_invalid_kwarg1.f90:3:5
  |
3 |     rewind(end="world")
  |     ^^^^^^^^^^^^^^^^^^^ 
